--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1246,7 +1246,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1258,27 +1257,49 @@
     "\n",
     "Balanced accuracy score is when the precision and recall are not trade of for each other. If both the number improve together its balanced accuracy.\n",
     "\t\t\t   \n",
-    "                         PrecisionHigh    | Recall High | Preci Low| RecallLow    | PreciAvg   | Recall Avg| Balanced Accuracy \n",
-    "                       -------------------------------------------------------------------------------------------\n",
-    "Naïve Ramdom Sampling\t|\t0.01\t      |\t0.69\t\t|\t1\t   |\t0.61\t  | 0.99\t   |0.61\t   |0.650352474\n",
-    "SMOTE Oversampling\t    |\t0.01\t      |\t0.69\t\t|\t1\t   |\t0.61\t  |\t0.99\t   |0.61\t   |0.650352474\t\n",
-    "    UnderSampling\t\t|\t0.01\t      |\t0.66\t\t|\t1\t   |\t0.4\t      |\t0.99\t   |0.4\t       |0.533010343\n",
-    "        Combination\t\t|\t0.01\t      |\t0.72\t\t|\t1\t   |\t0.57\t  |\t0.99\t   |0.57\t   |0.644711676\n",
-    "Balanced Random Forest \t|\t0.04\t      |\t0.67\t\t|\t1\t   |\t0.9\t      |\t0.99\t   |0.9\t       |0.785505272\n",
-    "    AdaBoost Classifier\t|\t0.09\t      |\t0.92\t\t|\t1\t   |\t0.94\t  |\t0.99\t   |0.94\t   |0.931660071\n",
+    "Naïve Ramdom Sampling\tPrecision Avg\t0.99\n",
+    "Naïve Ramdom Sampling\tRecall Avg\t0.61\n",
+    "Naïve Ramdom Sampling\tBalanced Accuracy Score\t0.650352474\n",
+    "SMOTE Oversampling\tPrecision Avg\t0.99\n",
+    "SMOTE Oversampling\tRecall Avg\t0.61\n",
+    "SMOTE Oversampling\tBalanced Accuracy Score\t0.650352474\n",
+    "UnderSampling\tPrecision Avg\t0.99\n",
+    "UnderSampling\tRecall Avg\t0.4\n",
+    "UnderSampling\tBalanced Accuracy Score\t0.533010343\n",
+    "Combination\tPrecision Avg\t0.99\n",
+    "Combination\tRecall Avg\t0.57\n",
+    "Combination\tBalanced Accuracy Score\t0.644711676\n",
+    "Balanced Random Forest Classifier\tPrecision Avg\t0.99\n",
+    "Balanced Random Forest Classifier\tRecall Avg\t0.9\n",
+    "Balanced Random Forest Classifier\tBalanced Accuracy Score\t0.785505272\n",
+    "AdaBoost Classifier\tPrecision Avg\t0.99\n",
+    "AdaBoost Classifier\tRecall Avg\t0.94\n",
+    "AdaBoost Classifier\tBalanced Accuracy Score\t0.931660071\n",
     "\n",
+    "Detailed data in Naïve Ramdom Sampling\tPrecision Avg\t0.99\n",
+    "Naïve Ramdom Sampling\tRecall Avg\t0.61\n",
+    "Naïve Ramdom Sampling\tBalanced Accuracy Score\t0.650352474\n",
+    "SMOTE Oversampling\tPrecision Avg\t0.99\n",
+    "SMOTE Oversampling\tRecall Avg\t0.61\n",
+    "SMOTE Oversampling\tBalanced Accuracy Score\t0.650352474\n",
+    "UnderSampling\tPrecision Avg\t0.99\n",
+    "UnderSampling\tRecall Avg\t0.4\n",
+    "UnderSampling\tBalanced Accuracy Score\t0.533010343\n",
+    "Combination\tPrecision Avg\t0.99\n",
+    "Combination\tRecall Avg\t0.57\n",
+    "Combination\tBalanced Accuracy Score\t0.644711676\n",
+    "Balanced Random Forest Classifier\tPrecision Avg\t0.99\n",
+    "Balanced Random Forest Classifier\tRecall Avg\t0.9\n",
+    "Balanced Random Forest Classifier\tBalanced Accuracy Score\t0.785505272\n",
+    "AdaBoost Classifier\tPrecision Avg\t0.99\n",
+    "AdaBoost Classifier\tRecall Avg\t0.94\n",
+    "AdaBoost Classifier\tBalanced Accuracy Score\t0.931660071\n",
+    "Detailed data in  /images/Analysis.PNG\n",
     " \n",
     "### Final recommendation on the model to use,\n",
     "From the above models if we go with resampling models, I think the results are close by. None of these models are giving good recall rate and balanced accuracy. So I will not recommend any of those.\n",
-    "But if we look at overall all the models analyzed, looking at the number for AdaBoost classifier, where the precision is 99% and recall is 94% with balanced accuracy of 93% I would highly recommend AdaBoost Classifier. This shows that it is highly likely that this model will give the best results."
+    "But if we look at overall all the models analyzed, looking at the number for AdaBoost classifier, where the precision is 99% and recall is 94% with balanced accuracy of 93% I would highly recommend AdaBoost Classifier. This shows that it is highly likely that this model will give the best results.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
