--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -1073,25 +1073,25 @@
     "AdaBoost Classifier\tRecall Avg\t0.94\n",
     "AdaBoost Classifier\tBalanced Accuracy Score\t0.931660071\n",
     "\n",
-    "Detailed data in Naïve Ramdom Sampling\tPrecision Avg\t0.99\n",
-    "Naïve Ramdom Sampling\tRecall Avg\t0.61\n",
-    "Naïve Ramdom Sampling\tBalanced Accuracy Score\t0.650352474\n",
-    "SMOTE Oversampling\tPrecision Avg\t0.99\n",
-    "SMOTE Oversampling\tRecall Avg\t0.61\n",
-    "SMOTE Oversampling\tBalanced Accuracy Score\t0.650352474\n",
-    "UnderSampling\tPrecision Avg\t0.99\n",
-    "UnderSampling\tRecall Avg\t0.4\n",
-    "UnderSampling\tBalanced Accuracy Score\t0.533010343\n",
-    "Combination\tPrecision Avg\t0.99\n",
-    "Combination\tRecall Avg\t0.57\n",
-    "Combination\tBalanced Accuracy Score\t0.644711676\n",
-    "Balanced Random Forest Classifier\tPrecision Avg\t0.99\n",
-    "Balanced Random Forest Classifier\tRecall Avg\t0.9\n",
-    "Balanced Random Forest Classifier\tBalanced Accuracy Score\t0.785505272\n",
-    "AdaBoost Classifier\tPrecision Avg\t0.99\n",
-    "AdaBoost Classifier\tRecall Avg\t0.94\n",
-    "AdaBoost Classifier\tBalanced Accuracy Score\t0.931660071\n",
-    "Detailed data in  /images/Analysis.PNG\n",
+    "<br>Detailed data in Naïve Ramdom Sampling\tPrecision Avg\t0.99\n",
+    "<br>Naïve Ramdom Sampling\tRecall Avg\t0.61\n",
+    "<br>Naïve Ramdom Sampling\tBalanced Accuracy Score\t0.650352474\n",
+    "<br>SMOTE Oversampling\tPrecision Avg\t0.99\n",
+    "<br>SMOTE Oversampling\tRecall Avg\t0.61\n",
+    "<br>SMOTE Oversampling\tBalanced Accuracy Score\t0.650352474\n",
+    "<br>UnderSampling\tPrecision Avg\t0.99\n",
+    "<br>UnderSampling\tRecall Avg\t0.4\n",
+    "<br>UnderSampling\tBalanced Accuracy Score\t0.533010343\n",
+    "<br>Combination\tPrecision Avg\t0.99\n",
+    "<br>Combination\tRecall Avg\t0.57\n",
+    "<br>Combination\tBalanced Accuracy Score\t0.644711676\n",
+    "<br>Balanced Random Forest Classifier\tPrecision Avg\t0.99\n",
+    "<br>Balanced Random Forest Classifier\tRecall Avg\t0.9\n",
+    "<br>Balanced Random Forest Classifier\tBalanced Accuracy Score\t0.785505272\n",
+    "<br>AdaBoost Classifier\tPrecision Avg\t0.99\n",
+    "<br>AdaBoost Classifier\tRecall Avg\t0.94\n",
+    "<br>AdaBoost Classifier\tBalanced Accuracy Score\t0.931660071\n",
+    "<br>Detailed data in  /images/Analysis.PNG\n",
     " \n",
     "### Final recommendation on the model to use,\n",
     "From the above models if we go with resampling models, I think the results are close by. None of these models are giving good recall rate and balanced accuracy. So I will not recommend any of those.\n",
